@@ -70,9 +70,11 @@ bzgold-platinum=Enable platinum processing
 bzgold-palladium=Enable palladium processing
 bzgold-catalysis=Enable catalysis recipes
 bzgold-alchemy=Alchemy
+bzgold-se-core-mining=SE core mining probability
 
 [mod-setting-description]
 bzgold-recipe-bypass=Skip modifying these recipes (comma-separated list).
 bzgold-list=If enabled, the text command [color=orange]BZList[/color] will dump a file to the script-output directory with a full list of recipes modified.\nRecommended to turn this off after you are done configuring your other settings.
 bzgold-byproduct=More smelting recipes output byproducts
+bzgold-se-core-mining=Probability of getting a result from SE core mining. It's recommended to keep this value low.
 
