@@ -61,3 +61,17 @@ if mods.bzlead then
     },
   })
 end
+
+if mods["space-exploration"] then
+  data:extend({
+    {
+      type = "double-setting",
+      name = "bzgold-se-core-mining",
+      setting_type = "startup",
+      default_value = 0.0,
+      minimum_value = 0.0,
+      maximum_value = 1.0,
+      order = "d2",
+    },
+  })
+end
